# OpenCL-labs-hse

lab1_convolution/: CMakeLists.txt  README.md  cl.hpp  convolution.cl  main.cpp  run.sh
lab2_prefix_sum/: CMakeLists.txt  README.md  cl.hpp  main.cpp  run.sh  scan.cl
